[gd_scene load_steps=5 format=3 uid="uid://d24f6at435xq8"]

[ext_resource type="Script" path="res://cards/counter.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://k3u6tq8q7fcg" path="res://assets/counter.png" id="2"]

[sub_resource type="Theme" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(72, 11.5)

[node name="counter" type="Area2D"]
z_index = 1
position = Vector2(1, -1)
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="counter_edit" type="TextEdit" parent="."]
visible = false
offset_left = -72.0
offset_top = -31.0
offset_right = 72.0
offset_bottom = -10.0
text = "20"
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="counter_label" type="Label" parent="."]
light_mask = 2
offset_left = -7.0
offset_top = -13.0
offset_right = 12.0
offset_bottom = 13.0
size_flags_horizontal = 4
theme = SubResource("4")
text = "20"

[node name="card_collision_box" type="CollisionShape2D" parent="."]
modulate = Color(0.513726, 0.564706, 0.705882, 1)
position = Vector2(0, -0.5)
shape = SubResource("1")

[node name="timer" type="Timer" parent="."]

[node name="delete_button" type="Button" parent="."]
visible = false
offset_left = -77.0
offset_top = -64.0
offset_right = 75.0
offset_bottom = -44.0
text = "Delete Token/Counter"

[connection signal="input_event" from="." to="." method="_on_touch_input_event"]
[connection signal="pressed" from="delete_button" to="." method="_on_delete_button_pressed"]
